--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,3 +1,56 @@
+body {
+    background-color: #212121;
+}
+
+.box1, .box2, .box3, .box4, .box5{
+    margin-left:15%;
+    margin-right:15%;
+}
+
 .box1, .box5{
     background-color: #1F2937;
 }
+
+.box2, .box4 {
+    background-color: #F9FAF8;
+}
+
+
+
+.box1container{
+    
+    position: relative;
+    margin-left: 20%;
+    margin-right:20%;
+}
+
+
+
+.logo {
+    max-width: 10%;
+    display:inline;
+}
+
+.box1header ul{
+    display:inline;
+    position: relative;
+    left: 0;
+    right: 0;
+}
+
+.box1header li{
+    display:inline;
+}
+
+
+.box3 {
+    background-color: #E5E7EB;
+    padding
+}
+
+.box5 {
+    text-align: center;
+    padding: 5%;
+    color:#F9FAF8
+}
+
