--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,6 +1,12 @@
+@font-face {
+    font-family: fontstack;
+    font-style: normal;
+    font-weight: 300;
+    src: local("Segoe UI"),local("Roboto"),local("Ubuntu");
+  }
 body {
     background-color: #212121;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Roboto';
 }
 
 .box1, .box2, .box3, .box4, .box5{
@@ -54,6 +60,10 @@ body {
     padding-left: 30px;
 }
 
+.box1header ul li a:hover{
+    color: #a1a3a7;
+}
+
 .box1header a{
     text-decoration: none;
     color: #E5E7EB;
@@ -87,6 +97,7 @@ body {
     display: block;
     font-size: 18px;
     color:#E5E7EB;
+    padding-bottom:20px;
 }
 
 .leftboxbutton{
@@ -94,12 +105,14 @@ body {
     border-radius: 10px;
     font-size: 18px;
     color: #F9FAF8;
-    border-width: 0;
     margin-top: 20px;
     padding-left: 7%;
     padding-right: 7%;
     padding-top: 2%;
     padding-bottom: 2%;
+}
+.leftboxbutton:hover{
+    background-color: #1f4a8f;
 }
 
 .rightbox img{
@@ -114,15 +127,49 @@ body {
 
 /**/
 
+.title {
+    display: block;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight:900;
+    text-align: center;
+    padding-top:50px;
+    padding-bottom: 40px;
+}
 
+.infoboxes{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding-bottom: 100px;
 
+}
 
+.infoboxes li{
+    display: inline-block;
+}
+.infoboxes li img{
+    display: block;
+    max-width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.infoboxtext {
+    display: block;
+    padding-top: 15px;
+    color: #1F2937;
+    font-size: 24px;
+}
 
 /**/
 
 
 .box3 {
     background-color: #E5E7EB;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
 }
 
 /**/
